@@ -1,19 +1,12 @@
 {
-  "timestamp" : "2022-07-24T08:16:30Z",
-  "count_outdated" : 109,
-  "uniques_outdated" : 73,
-  "count" : 111,
-  "uniques" : 75,
+  "timestamp" : "2022-08-07T16:21:24Z",
+  "count_outdated" : 111,
+  "uniques_outdated" : 75,
+  "count" : 112,
+  "uniques" : 76,
   "clones" : [
     {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
