@@ -1,14 +1,9 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "clones": [
     {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
